infrastructure/_obsolete/traefik/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      terminationGracePeriodSeconds: 10
      containers:
      - name: traefik
        image: traefik:v3.3
        #args: {}
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        - name: smtp
          containerPort: 25
        - name: dashboard
          containerPort: 8080
        #imagePullPolicy: IfNotPresent
#        env:
#        - name: POSTGRES_DB
#          valueFrom:
#            configMapKeyRef:
#              name: existdb-config
#              key: POSTGRES_DB
        volumeMounts:
        - name: config-files
          mountPath: '/etc/traefik/'
          readOnly: true
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 256Mi
      volumes:
      - name: config-files
        configMap:
          name: traefik-config

#  volumeClaimTemplates:
#  - metadata:
#      name: rabbitmq-data
#    spec:
#      accessModes:
#      - ReadWriteOnce
#      resources:
#        requests:
#          storage: 128Mi
